Bug fix cosmos column names

--- a/dmu1/dmu1_ml_COSMOS/1.4.1_HSC-DEEP.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.4.1_HSC-DEEP.ipynb
@@ -1101,6 +1101,13 @@
     "    if col.startswith('m_'):\n",
     "        \n",
     "        errcol = \"merr{}\".format(col[1:])\n",
+    "        \n",
+    "        #Some inf and 99. mags\n",
+    "        mask = (catalogue[col] > 90.) | (catalogue[errcol] > 90.)\n",
+    "        catalogue[col][mask] = np.nan\n",
+    "        catalogue[errcol][mask] = np.nan\n",
+    "        \n",
+    "        \n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
     "        # Fluxes are added in µJy\n",
