--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.1_HSC-SSP.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.1_HSC-SSP.ipynb
@@ -45,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -95,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
@@ -156,6 +160,12 @@
     "    if col.startswith('m_'):\n",
     "        \n",
     "        errcol = \"merr{}\".format(col[1:])\n",
+    "        \n",
+    "        #Some inf and 99. mags\n",
+    "        mask = (catalogue[col] > 90.) | (catalogue[errcol] > 90.)\n",
+    "        catalogue[col][mask] = np.nan\n",
+    "        catalogue[errcol][mask] = np.nan\n",
+    "        \n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
     "        # Fluxes are added in µJy\n",
