--- a/dmu1/dmu1_ml_XMM-LSS/1.9.1_HSC-WIDE.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.9.1_HSC-WIDE.ipynb
@@ -44,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -963,6 +965,12 @@
     "    if col.startswith('m_'):\n",
     "        \n",
     "        errcol = \"merr{}\".format(col[1:])\n",
+    "        \n",
+    "        #Some inf and 99. mags\n",
+    "        mask = (catalogue[col] > 90.) | (catalogue[errcol] > 90.)\n",
+    "        catalogue[col][mask] = np.nan\n",
+    "        catalogue[errcol][mask] = np.nan\n",
+    "        \n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
     "        # Fluxes are added in µJy\n",
