--- a/dmu1/dmu1_ml_EGS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_EGS/2_Merging.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -382,7 +384,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -426,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -1726,7 +1732,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aegis_bands = ['j',  'k'] \n",
@@ -2298,7 +2306,9 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Rename UHS to UKIDSS\n",
@@ -2336,6 +2346,10 @@
     "    1 * ~np.isnan(master_catalogue['f_gpc1_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_z']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_y']) +\n",
+    "#Legacy Survey\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_mosaic_z']) +\n",
     "#CFHT\n",
     "    1 * ~np.isnan(master_catalogue['f_megacam_u']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_megacam_g']) +\n",
@@ -2507,7 +2521,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "columns = [\"help_id\", \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
@@ -2553,7 +2569,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue[columns].write(\"{}/master_catalogue_egs{}.fits\".format(OUT_DIR, SUFFIX))"
