--- a/dmu1/dmu1_ml_EGS/1.8_IRAC-EGS.ipynb
+++ b/dmu1/dmu1_ml_EGS/1.8_IRAC-EGS.ipynb
@@ -44,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -94,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
@@ -111,8 +115,8 @@
     "        'err_irac80_final': \"ferr_irac-egs_i4\", \n",
     "    \n",
     "    #Subaru suprime\n",
-    "    'SUBARU_R': 'f_suprime_r',\n",
-    "    'err_SUBARU_R': 'ferr_suprime_r',\n",
+    "    'SUBARU_R': 'f_suprime_rc',\n",
+    "    'err_SUBARU_R': 'ferr_suprime_rc',\n",
     "    \n",
     "    #CFHT megacam and cfht12k\n",
     "    'CFHT_u': 'f_irac-megacam_u',\n",
@@ -187,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
