--- a/dmu28/dmu28_EGS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_EGS/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,8 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180129_cigale.fits\")"
+    "SUFFIX = '20180217'\n",
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_EGS/data/EGS_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
   {
@@ -67,12 +68,12 @@
    },
    "outputs": [],
    "source": [
-    "good = {}\n",
-    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
-    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "# good = {}\n",
+    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
+    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -90,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -101,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -119,7 +120,8 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
+    "#best_catalogue = master_catalogue[combined_good].copy()\n",
+    "best_catalogue = master_catalogue.copy()"
    ]
   },
   {
@@ -164,12 +166,15 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [          \"OmegaCAM u\"]\n",
-    "g_bands = [\"GPC1 g\", \"OmegaCAM g\"]\n",
-    "r_bands = [\"GPC1 r\", \"OmegaCAM r\"]\n",
-    "i_bands = [\"GPC1 i\", \"OmegaCAM i\"]\n",
-    "z_bands = [\"VISTA z\", \"OmegaCAM z\", \"GPC1 z\",]\n",
-    "y_bands = [\"VISTA y\"  \"GPC1 y\", ]\n",
+    "u_bands = [\"megacam_u\"]\n",
+    "g_bands = [\"megacam_g\",              \"90prime_g\", \"gpc1_g\" ] #No Suprime g?\n",
+    "r_bands = [\"megacam_r\", \"suprime_r\", \"90prime_r\", \"gpc1_r\"]\n",
+    "i_bands = [\"megacam_i\", \"suprime_i\",              \"gpc1_i\"]\n",
+    "z_bands = [\"megacam_z\", \"suprime_z\", \"mosaic_z\",  \"gpc1_z\", ]\n",
+    "y_bands = [             \"suprime_y\",              \"gpc1_y\"]\n",
+    "j_bands = [\"wircam_j\",  \"wircs_\", \"omega2000_J\", \"ukidss_j\"]\n",
+    "h_bands = [\"wircam_h\"]\n",
+    "k_bands = [\"wircam_ks\", \"wircs_k\", \"omega2000_Ks\"] #WIRCS Ks (is called wircs_k)\n",
     "\n",
     "def remove_unneeded_fluxes(list_of_bands):\n",
     "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
@@ -192,7 +197,9 @@
     "remove_unneeded_fluxes(r_bands)\n",
     "remove_unneeded_fluxes(i_bands)\n",
     "remove_unneeded_fluxes(z_bands)\n",
-    "remove_unneeded_fluxes(y_bands)"
+    "remove_unneeded_fluxes(y_bands)\n",
+    "remove_unneeded_fluxes(j_bands)\n",
+    "remove_unneeded_fluxes(k_bands)"
    ]
   },
   {
@@ -203,7 +210,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")"
+    "#best_catalogue.write(\"data_tmp/EGS_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -221,7 +228,8 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
+    "#best_catalogue = master_catalogue[combined_good].copy()\n",
+    "best_catalogue = master_catalogue.copy()"
    ]
   },
   {
@@ -233,7 +241,7 @@
    "outputs": [],
    "source": [
     "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
+    "best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
@@ -307,7 +315,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/EGS_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
