--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Master list\n",
-    "SUFFIX='20180215'\n",
+    "SUFFIX='20180217'\n",
     "ml = Table.read(\n",
     "    \"../../dmu1/dmu1_ml_COSMOS/data/master_catalogue_cosmos_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
@@ -68,16 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard.  [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard. \n"
+     ]
+    }
+   ],
    "source": [
     "# XID+ MIPS24\n",
     "\n",
     "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_COSMOS/data/\"\n",
-    "                          \"dmu26_XID+MIPS_COSMOS_cat_20170213.fits\")\n",
+    "                          \"dmu26_XID+MIPS_COSMOS_20170213.fits\")\n",
     "xid_mips24.meta = None\n",
     "\n",
     "# Adding the error column\n",
@@ -88,26 +97,35 @@
     "    name=\"ferr_mips_24\"\n",
     "))\n",
     "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
-    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
+    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard.  [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard. \n"
+     ]
+    }
+   ],
    "source": [
     "# XID+ PACS\n",
     "\n",
     "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_COSMOS/data/\"\n",
-    "                        \"dmu26_XID+PACS_COSMOS_cat_20170303.fits\")\n",
+    "                        \"dmu26_XID+PACS_COSMOS_20170303.fits\")\n",
     "xid_pacs.meta = None\n",
     "\n",
     "# Convert from mJy to μJy\n",
     "for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
-    "            \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
+    "            \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l*1000.0\"]:\n",
     "    xid_pacs[col] *= 1000\n",
     "\n",
     "xid_pacs.add_column(Column(\n",
@@ -117,29 +135,40 @@
     "    name=\"ferr_pacs_green\"\n",
     "))\n",
     "xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
-    "xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
+    "#xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
     "\n",
     "xid_pacs.add_column(Column(\n",
     "    data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
-    "                 xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
+    "                 xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l*1000.0']],\n",
     "                axis=0),\n",
     "    name=\"ferr_pacs_red\"\n",
     "))\n",
     "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
-    "xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
+    "xid_pacs['HELP_ID'].name = \"help_id\"\n",
     "\n",
     "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
-    "                    'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
-    "                    'flag_pacs_red']\n"
+    "                    'f_pacs_red', 'ferr_pacs_red',\n",
+    "                    ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard.  [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard. \n",
+      "WARNING: UnitsWarning: 'mJy/Beam' did not parse as fits unit: At col 4, Unit 'Beam' not supported by the FITS standard. Did you mean beam? [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: 'mJy/Beam' did not parse as fits unit: At col 4, Unit 'Beam' not supported by the FITS standard. Did you mean beam?\n"
+     ]
+    }
+   ],
    "source": [
     "# XID+ SPIRE\n",
     "\n",
@@ -147,7 +176,7 @@
     "                         \"dmu26_XID+SPIRE_COSMOS_20161129.fits\")\n",
     "xid_spire.meta = None\n",
     "\n",
-    "xid_spire['HELP_ID'].name = \"help_id\"\n",
+    "#xid_spire['HELP_ID'].name = \"help_id\"\n",
     "\n",
     "# Convert from mJy to μJy\n",
     "for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
@@ -178,18 +207,38 @@
     "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
     "xid_spire = xid_spire['help_id',\n",
-    "                      'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
-    "                      'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
-    "                      'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
+    "                      'f_spire_250', 'ferr_spire_250',\n",
+    "                      'f_spire_350', 'ferr_spire_350',\n",
+    "                      'f_spire_500', 'ferr_spire_500']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: The unit 'erg' has been deprecated in the FITS standard. Suggested: cm2 g s-2. [astropy.units.format.utils]\n",
+      "WARNING:astropy:UnitsWarning: The unit 'erg' has been deprecated in the FITS standard. Suggested: cm2 g s-2.\n",
+      "WARNING: UnitsWarning: 'log(Msun)' did not parse as fits unit: At col 4, Unit 'Msun' not supported by the FITS standard. Did you mean Sun? [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: 'log(Msun)' did not parse as fits unit: At col 4, Unit 'Msun' not supported by the FITS standard. Did you mean Sun?\n",
+      "WARNING: UnitsWarning: 'log(Msun/yr)' did not parse as fits unit: At col 4, Unit 'Msun' not supported by the FITS standard. Did you mean Sun? [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: 'log(Msun/yr)' did not parse as fits unit: At col 4, Unit 'Msun' not supported by the FITS standard. Did you mean Sun?\n",
+      "WARNING: UnitsWarning: 'log(yr**-1)' did not parse as fits unit: 'log' is not a recognized function [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: 'log(yr**-1)' did not parse as fits unit: 'log' is not a recognized function\n",
+      "WARNING: UnitsWarning: 'log(erg.s**-1.Hz**-1)' did not parse as fits unit: 'log' is not a recognized function [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: 'log(erg.s**-1.Hz**-1)' did not parse as fits unit: 'log' is not a recognized function\n",
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
+      "Check the NumPy 1.11 release notes for more information.\n",
+      "  ma.MaskedArray.__setitem__(self, index, value)\n"
+     ]
+    }
+   ],
    "source": [
     "# Photo-z\n",
     "#Get photoz from COSMOS2015 catalogue\n",
@@ -205,11 +254,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel/__main__.py:5: RuntimeWarning: invalid value encountered in less\n"
+     ]
+    }
+   ],
    "source": [
     "# Temp spec-z\n",
     "\n",
@@ -227,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -351,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -431,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -446,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -473,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -494,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
