--- a/dmu1/dmu1_ml_EGS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_EGS/2_Merging.ipynb
@@ -1576,7 +1576,7 @@
     "    merr_irac[use_candels] = master_catalogue['merr_candels-irac_' + band][use_candels]\n",
     "    merr_irac[use_irac] = master_catalogue['merr_irac-egs_' + band][use_irac]\n",
     "    \n",
-    "    flag_irac = np.full(len(master_catalogue), np.nan)\n",
+    "    flag_irac = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    flag_irac[use_candels] = master_catalogue['flag_candels-irac_' + band][use_candels]\n",
     "    flag_irac[use_irac] = master_catalogue['flag_irac-egs_' + band][use_irac]\n",
     "\n",
