--- a/dmu1/dmu1_ml_EGS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_EGS/2_Merging.ipynb
@@ -1763,7 +1763,7 @@
     "    merr_aegis[use_aegis] = master_catalogue['merr_aegis_' + band][use_aegis]\n",
     "    merr_aegis[use_irac] = master_catalogue['merr_irac-aegis_' + band][use_irac]\n",
     "    \n",
-    "    flag_aegis = np.full(len(master_catalogue), np.nan)\n",
+    "    flag_aegis = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    flag_aegis[use_aegis] = master_catalogue['flag_aegis_' + band][use_aegis]\n",
     "    flag_aegis[use_irac] = master_catalogue['flag_irac-aegis_' + band][use_irac]\n",
     "\n",
@@ -2574,7 +2574,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue[columns].write(\"{}/master_catalogue_egs{}.fits\".format(OUT_DIR, SUFFIX))"
+    "master_catalogue[columns].write(\"{}/master_catalogue_egs{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
    ]
   }
  ],
