--- a/dmu1/dmu1_ml_EGS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_EGS/2_Merging.ipynb
@@ -2520,6 +2520,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in master_catalogue.colnames:\n",
+    "    if \"flag\" in col:\n",
+    "        master_catalogue[col].dtype = bool\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 80,
    "metadata": {
     "collapsed": true
