--- a/dmu1/dmu1_ml_EGS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_EGS/2_Merging.ipynb
@@ -1813,19 +1813,19 @@
     "\n",
     "    f_ap_aegis = np.full(len(master_catalogue), np.nan)\n",
     "    f_ap_aegis[use_ap_aegis] = master_catalogue['f_ap_aegis_' + band][use_ap_aegis]\n",
-    "    f_ap_aegis[use_ap_irac] = master_catalogue['f_ap_irac-aegis_' + band][use_ap_irac]\n",
+    "    #f_ap_aegis[use_ap_irac] = master_catalogue['f_ap_irac-aegis_' + band][use_ap_irac]\n",
     "\n",
     "    ferr_ap_aegis = np.full(len(master_catalogue), np.nan)\n",
     "    ferr_ap_aegis[use_ap_aegis] = master_catalogue['ferr_ap_aegis_' + band][use_ap_aegis]\n",
-    "    ferr_ap_aegis[use_ap_irac] = master_catalogue['ferr_ap_irac-aegis_' + band][use_ap_irac]\n",
+    "    #ferr_ap_aegis[use_ap_irac] = master_catalogue['ferr_ap_irac-aegis_' + band][use_ap_irac]\n",
     "    \n",
     "    m_ap_aegis = np.full(len(master_catalogue), np.nan)\n",
     "    m_ap_aegis[use_ap_aegis] = master_catalogue['m_ap_aegis_' + band][use_aegis]\n",
-    "    m_ap_aegis[use_ap_irac] = master_catalogue['m_ap_irac-aegis_' + band][use_irac]\n",
+    "    #m_ap_aegis[use_ap_irac] = master_catalogue['m_ap_irac-aegis_' + band][use_irac]\n",
     "    \n",
     "    merr_ap_aegis = np.full(len(master_catalogue), np.nan)\n",
     "    merr_ap_aegis[use_ap_aegis] = master_catalogue['merr_ap_aegis_' + band][use_ap_aegis]\n",
-    "    merr_ap_aegis[use_ap_irac] = master_catalogue['merr_ap_irac-aegis_' + band][use_ap_irac]\n",
+    "    #merr_ap_aegis[use_ap_irac] = master_catalogue['merr_ap_irac-aegis_' + band][use_ap_irac]\n",
     "    \n",
     "\n",
     "    master_catalogue.add_column(Column(data=f_ap_aegis, name=\"f_ap_wircs_\" + band))\n",
@@ -1855,12 +1855,12 @@
     "    origin_ap[use_ap_aegis] = \"AEGIS\"\n",
     "    origin_ap[use_ap_irac] = \"IRAC-EGS\"\n",
     "    \n",
-    "    aegis_origin.add_column(Column(data=origin, name= 'f_ap_wircs_' + band ))\n",
+    "    aegis_origin.add_column(Column(data=origin_ap, name= 'f_ap_wircs_' + band ))\n",
     "\n",
-    "    aegis_stats['AEGIS'][aegis_stats['Band'] == band] = np.sum(has_aegis)\n",
-    "    aegis_stats['IRAC-EGS'][aegis_stats['Band'] == band] = np.sum(has_irac)\n",
-    "    aegis_stats['use AEGIS'][aegis_stats['Band'] == band] = np.sum(use_aegis)\n",
-    "    aegis_stats['use IRAC-EGS'][aegis_stats['Band'] == band] = np.sum(use_irac)    \n",
+    "    aegis_stats['AEGIS ap'][aegis_stats['Band'] == band] = np.sum(has_ap_aegis)\n",
+    "    aegis_stats['IRAC-EGS ap'][aegis_stats['Band'] == band] = np.sum(has_ap_irac)\n",
+    "    aegis_stats['use AEGIS ap'][aegis_stats['Band'] == band] = np.sum(use_ap_aegis)\n",
+    "    aegis_stats['use IRAC-EGS ap'][aegis_stats['Band'] == band] = np.sum(use_ap_irac)    \n",
     "    \n",
     "    \n",
     "\n"
